# claude-code-nix-sandbox

./: .gitignore  CLAUDE.md  README.md  flake.nix
.github/workflows/: ci.yml  docs.yml  update-flake.yml
artifacts/: devlog.md  devlog_manager.md
artifacts/skills/: bubblewrap-dynamic-bash-arrays-for-optional-flags.md  chromium-cross-sandbox-isolation-dbus-and-cdp.md  chromium-extension-bundling-via-managed-policy.md  claude-code-session-jsonl-extraction.md  nix-daemon-socket-forwarding-in-sandboxes.md  nix-dual-purpose-derivation-build-and-run.md  nix-overlay-injection-into-nixosSystem-calls.md  nix-writeShellApplication-escaping-and-shellcheck.md  nixos-qemu-vm-serial-console-setup.md  nixos-vm-integration-test-with-stub-services.md  nspawn-privilege-drop-without-pam.md  ssh-agent-forwarding-into-sandboxes.md  ssh-remote-cli-printf-q-escaping.md  sudo-aware-uid-detection-for-containers.md  vm-9p-runtime-path-fixup-for-session-continuity.md
artifacts/tools/: session-summarizer.sh
docs/: book.toml
docs/plans/: 2026-02-28-websocket-log-viewer-design.md  2026-02-28-websocket-log-viewer-plan.md
manager/: Cargo.toml
manager/src/: api.rs  display.rs  fragments.rs  logs.rs  main.rs  metrics.rs  sandbox.rs  screenshot.rs  session.rs  state.rs
manager/static/: logs.js  style.css
manager/templates/: base.html  index.html  new.html  sandbox.html
manager/templates/fragments/: claude_metrics.html  sandbox_list.html  screenshot_frame.html  system_metrics.html
nix/: chromium.nix  sandbox-spec.nix
scripts/: claude-remote.nix
tests/: manager.nix
(+21 files in other folders)
