[package]
name = "claude-sandbox-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12"
askama_axum = "0.4"
axum = { version = "0.7", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
